# here_to_slay_dungeons_mapper

./: .gitignore  CHANGELOG.md  GRAPHICS_LICENSE.md  LICENSE  README.md  TODO-updater.md  about.html  about_v2.html  app.js  changelog.html  download-stats.php  download.html  download.php  hex-background.html  index.html  package-lock.json  package.json  pdf-export.html  qa-checks-bridge.html  qa-checks.html  styles.css
docs/: custom-tileset-plan.md  custom-tileset-qa-checklist.md  custom-tileset-refactor-checklist.md  drawer-switch-plan.md  optimization-plan-round-2.md  optimization-plan.md  tauri-app-plan.md  wall-editor-notes.md
gfx/: Boss_cards.psd  logo.psd  overgrown_entrance.psd
modules/: assets.js  auto-build.js  board-interaction.js  board-math.js  board-view.js  board-visuals.js  boss-management.js  boss-pile.js  contact-analysis.js  custom-share.js  custom-tileset-folder.js  custom-tileset-package.js  custom-tileset-storage-folder.js  custom-tileset-storage-idb.js  custom-tileset-storage.js  data-folder-store.js  dev-qa-checks.js  event-setup.js  geometry-utils.js  hint-overlay.js  local-data-notices.js  share-export.js  share-flow.js  theme-manager.js  tile-assets.js  tile-guides.js  tile-placement.js  tile-pose.js  tileset-selector.js  ui-notices.js  ui-themes.js  wall-editor-ui.js  wall-storage.js  zip-reader.js
scripts/: build-release.sh  build-tauri-web.mjs  build-web.mjs  release.mjs  sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+17 files in other folders)
