[package]
name = "here-to-slay-dungeon-mapper"
version = "0.8.0"
description = "A desktop shell for the Here to Slay DUNGEONS mapper."
authors = ["Rod Clemen"]
edition = "2021"

[lib]
name = "here_to_slay_dungeon_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
